--- a/Cargo.toml
+++ b/Cargo.toml
@@ -5,5 +5,5 @@ members =  [
     "day6" ,"day7" ,"day8" ,"day9","day10",
     "day11","day12","day13","day14","day15",
     "day16","day17",        "day19","day20",
-    "day21"
+    "day21","day22"
 ]
